fixed project card visibility issues

--- a/client/src/Components/HomeComponent/ProjectComponent/AllProjects.module.css
+++ b/client/src/Components/HomeComponent/ProjectComponent/AllProjects.module.css
@@ -43,6 +43,5 @@
         flex-direction: row;
         align-content: stretch;
         justify-content: center;
-        position: absolute;
     }
 }
