--- a/client/src/Components/HomeComponent/ProjectComponent/ProjectComponent.module.css
+++ b/client/src/Components/HomeComponent/ProjectComponent/ProjectComponent.module.css
@@ -18,7 +18,6 @@
 }
 
 .Footer {
-    background-color: lightblue;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
